--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -107,7 +107,7 @@
               <p class="card-text">{{ project.summary }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href={{ project.app_link }}>View</a></button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{{ project.app_link}}">View</a></button>
                 </div>
                 <small class="text-muted">{{ project.tool_used }}</small>
               </div>
